changed location marker icon & fixed alignment issue

--- a/static/style.css
+++ b/static/style.css
@@ -124,12 +124,12 @@ body {
 #map {
   position: relative;
   aspect-ratio: 1.2;
-  width: 100%;
+  width: calc(100%-3px);
   margin-top: 20px; /* 上方距離 */
   margin-bottom: 20px; /* 下方距離 */
   background-color: #e3e7e9; /* 淡灰色背景 */
   border: 1.5px solid #5ab4c5; /* 邊框樣式可選 */
-  border-radius: 4px;
+  border-radius: 8px;
 }
 
 #weatherOverlayImage {
